# ntxcore

./: .gitignore  README.md
ExchangeService/: .env  index.js  package-lock.json  package.json
ExchangeService/src/: index.js
ExchangeService/src/exchanges/bitget/: easyapi.js  index.js
ExchangeService/src/exchanges/gate/: easyapi.js  index.js
ExchangeService/src/exchanges/xt/: easyapi.js  index.js
ExchangeService/src/services/: backendApiService.js  cachingService.js  stateService.js
ExchangeService/src/utils/: logger.js
admin/: env.js  index.html
backend/: .env  Cargo.toml  database.db
backend/src/: admin.rs  auth.rs  banner.rs  course.rs  db.rs  gntx_sync.rs  main.rs  middleware.rs  mining.rs  payment.rs  settlement.rs  tasks.rs  user.rs  utils.rs
contract/: hardhat.config.js  package-lock.json  package.json  remix.config.json  simple  token.sol
contract/contracts/: NexTradeDAO.sol
contract/test/: NexTradeDAO.test.js
gntx-sync-service/: .env  index.js  package-lock.json  package.json
