[package]
name = "ntxcore"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
rusqlite = { version = "0.29", features = ["bundled"] }
dotenv = "0.15"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] } # 添加这一行，支持时间处理
async-trait = "0.1" # 添加这一行，用于定义异步 trait
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lettre = { version = "0.11", features = ["smtp-transport", "builder", "tokio1-native-tls"], default-features = false }
jsonwebtoken = "9"
regex = "1"
actix-cors = "0.6"
chrono-tz = "0.8" # 添加这一行
env_logger = "0.11.8"
futures-util = "0.3.31"
